@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>750</width>
-    <height>610</height>
+    <height>638</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -504,7 +504,7 @@
          </item>
         </widget>
        </item>
-       <item row="10" column="1">
+       <item row="11" column="1">
         <layout class="QHBoxLayout" name="horizontalLayout">
          <property name="spacing">
           <number>5</number>
@@ -596,7 +596,7 @@
          </property>
         </widget>
        </item>
-       <item row="10" column="3">
+       <item row="11" column="3">
         <layout class="QHBoxLayout" name="horizontalLayout_2">
          <property name="spacing">
           <number>5</number>
@@ -639,25 +639,52 @@
        <item row="9" column="0">
         <widget class="QLabel" name="label_16">
          <property name="text">
-          <string>&amp;Verify Host/Peer</string>
+          <string>&amp;Verify Host</string>
          </property>
          <property name="alignment">
           <set>Qt::AlignCenter</set>
          </property>
          <property name="buddy">
-          <cstring>in_verify</cstring>
+          <cstring>in_verify_host</cstring>
          </property>
         </widget>
        </item>
        <item row="9" column="1">
-        <widget class="QCheckBox" name="in_verify">
+        <widget class="QCheckBox" name="in_verify_host">
          <property name="text">
           <string/>
          </property>
         </widget>
        </item>
        <item row="9" column="3">
-        <widget class="QCheckBox" name="out_verify">
+        <widget class="QCheckBox" name="out_verify_host">
+         <property name="text">
+          <string/>
+         </property>
+        </widget>
+       </item>
+       <item row="10" column="0">
+        <widget class="QLabel" name="label_18">
+         <property name="text">
+          <string>&amp;Verify Peer</string>
+         </property>
+         <property name="alignment">
+          <set>Qt::AlignCenter</set>
+         </property>
+         <property name="buddy">
+          <cstring>in_verify_host</cstring>
+         </property>
+        </widget>
+       </item>
+       <item row="10" column="1">
+        <widget class="QCheckBox" name="in_verify_peer">
+         <property name="text">
+          <string/>
+         </property>
+        </widget>
+       </item>
+       <item row="10" column="3">
+        <widget class="QCheckBox" name="out_verify_peer">
          <property name="text">
           <string/>
          </property>
@@ -709,7 +736,8 @@
   <tabstop>in_authentication</tabstop>
   <tabstop>in_username</tabstop>
   <tabstop>in_password</tabstop>
-  <tabstop>in_verify</tabstop>
+  <tabstop>in_verify_host</tabstop>
+  <tabstop>in_verify_peer</tabstop>
   <tabstop>testpop3</tabstop>
   <tabstop>out_method</tabstop>
   <tabstop>out_server_address</tabstop>
@@ -718,7 +746,8 @@
   <tabstop>out_authentication</tabstop>
   <tabstop>out_username</tabstop>
   <tabstop>out_password</tabstop>
-  <tabstop>out_verify</tabstop>
+  <tabstop>out_verify_host</tabstop>
+  <tabstop>out_verify_peer</tabstop>
   <tabstop>testsmtp</tabstop>
   <tabstop>buttonBox</tabstop>
  </tabstops>
