@@ -1,6 +1,8 @@
 0.20 (03/01/2015)
 
 1.   Modified default values of UI elements.
+2.   Ability to verify the Poptastic hosts and peers separately.
+3.   Links distribution.
 
 0.19 (02/22/2015)
 
